some color to differentiaate

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset = "UTF-8" />
     <title>gifTime</title>
+    <link rel = "stylesheet" href="./assets/style.css" />
   </head>
 
   <body>
@@ -20,5 +21,10 @@
     <script type = "text/javascript" src="./assets/logic.js"></script>
 
   </body>
+
+
+
+  
+  <footer>&copy 2017 Gail!</footer>
 
 </html>
