--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
   </head>
 
   <body>
-    <div id="instruments">first buttons will go here</div>
+    <div class="instruments">first buttons will go here:
 
-    <div id="input">input area</div>
-    <button id="search">SEARCH</button>
+        <button id="accordion">accordion</button>
+        <button id="cowbell">cowbell</button>
+        <button id="maracas">maracas</button>
+        <button id="tamborine">tamborine</button>
+        <button id="sitar">sitar</button>
+        <button id="xylophone">xylophone</button>
+        <button id="harp">harp</button>
+        <button id="saxophone">saxophone</button>
+        <button id="slideguitar">slideguitar</button>
+        <button id="theremin">theremin</button>
+        <button id="gong">gong</button>
+    </div>
+
+    <div class = "search">
+        <div id="input">input area</div>
+        <button id="submit">SUBMIT</button>
+    </div>
 
 
     </div>
@@ -24,7 +39,7 @@
 
 
 
-  
-  <footer>&copy 2017 Gail!</footer>
+
+  <footer>&copy; 2017 Gail!</footer>
 
 </html>
