--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   </head>
 
   <body>
-    <div class="instruments">first buttons will go here:
-
-        <button id="accordion">accordion</button>
-        <button id="cowbell">cowbell</button>
-        <button id="maracas">maracas</button>
-        <button id="tamborine">tamborine</button>
-        <button id="sitar">sitar</button>
-        <button id="xylophone">xylophone</button>
-        <button id="harp">harp</button>
-        <button id="saxophone">saxophone</button>
-        <button id="slideguitar">slideguitar</button>
-        <button id="theremin">theremin</button>
-        <button id="gong">gong</button>
+    <div class="push">
+        <button data-instrument="accordion">accordion</button>
+        <button data-instrument="cowbell">cowbell</button>
+        <button data-instrument="maracas">maracas</button>
+        <button data-instrument="tamborine">tamborine</button>
+        <button data-instrument="sitar">sitar</button>
+        <button data-instrument="xylophone">xylophone</button>
+        <button data-instrument="harp">harp</button>
+        <button data-instrument="saxophone">saxophone</button>
+        <button data-instrument="slideguitar">slideguitar</button>
+        <button data-instrument="theremin">theremin</button>
+        <button data-instrument="gong">gong</button>
     </div>
+
+    <div class="instruments"></div>
 
     <div class = "search">
         <div id="input">input area</div>
