--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
   </head>
 
   <body>
-    <div class="push">
-        <button data-instrument="accordion">accordion</button>
-        <button data-instrument="cowbell">cowbell</button>
-        <button data-instrument="maracas">maracas</button>
-        <button data-instrument="tamborine">tamborine</button>
-        <button data-instrument="sitar">sitar</button>
-        <button data-instrument="xylophone">xylophone</button>
-        <button data-instrument="harp">harp</button>
-        <button data-instrument="saxophone">saxophone</button>
-        <button data-instrument="slideguitar">slideguitar</button>
-        <button data-instrument="theremin">theremin</button>
-        <button data-instrument="gong">gong</button>
+  <div class="row">
+    <div class="col-lg-12">
+        <div class="btns">
+            <button data-instrument="accordion">accordion</button>
+            <button data-instrument="cowbell">cowbell</button>
+            <button data-instrument="maracas">maracas</button>
+            <button data-instrument="tamborine">tamborine</button>
+            <button data-instrument="sitar">sitar</button>
+            <button data-instrument="xylophone">xylophone</button>
+            <button data-instrument="harp">harp</button>
+            <button data-instrument="saxophone">saxophone</button>
+            <button data-instrument="ukelele">ukelele</button>
+            <button data-instrument="theremin">theremin</button>
+            <button data-instrument="gong">gong</button>
+        </div>
+      </div>
     </div>
 
-    <div class="instruments"></div>
+    <div class="instruments">hi</div>
 
     <div class = "search">
         <div id="input">input area</div>
