--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-lg-12">
         <div class="btns">
-            <button         data-instrument="accordion">accordion
+            <button data-instrument="accordion">accordion
             </button>
             <button data-instrument="cowbell">cowbell
             </button>
@@ -33,14 +33,14 @@
   <div class="row">
 
     <div class="col-lg-12">
-          <div class="instruments">hi</div>
+          <div class="instruments">```</div>
     </div>
-    <div class="col-lg-4">
-          <!-- <div class = "search">
-            <div id="input">input area</div>
-            <button id="submit">SUBMIT</button>
-          </div> -->
 
+    <br />
+
+  <div class="row">
+
+    <div class="col-lg-4" id ="addNew">
           <form id="input-form">
               <label for="instrument-input">Type the name of an instrument you like</label>
               <input type="text" id="instrument-input"><br>
