ratings censor is on;need buttons;need no prepend

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <button data-instrument="ukelele">ukelele</button>
             <button data-instrument="theremin">theremin</button>
             <button data-instrument="gong">gong</button>
+
+            <div id="buttons-view"></div>
         </div>
       </div>
     </div>
